--- a/src/app/components/citas/citas.component.css
+++ b/src/app/components/citas/citas.component.css
@@ -385,7 +385,11 @@ Make sure disabled buttons don't get the pointer cursor.
 2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
    This can trigger a poorly considered lint error in some tools but is included by design.
 */
-
+.error {
+    color: red;
+    margin-top: -23px;
+    font-size: 20px;
+}
 img,
 svg,
 video,
